# FastAPICosmosDB

./: .gitignore  README.md  logging.conf  pyproject.toml
app/: main.py
app/core/config/: settings.py
app/models/: cosmos_models.py  custom_types.py
app/routers/: cosmos_router.py
app/services/: azure_cosmos_manager.py  email_service.py  email_templates.py  gmail_sender.py  logging_service.py  status_tracker.py
html/: cosmos_router.html
tests/: conftest.py
tests/unit/: test_cosmos_router.py  test_delete_account.py  test_notifications.py  test_settings.py
